<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/epilepsy_switch_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:layout_margin="16dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/MyCheckBox"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_below="@id/epilepsy_switch_alert"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/epilepsy_page_number_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_number"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/epilepsy_page_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_below="@id/epilepsy_page_number_description"
            android:hint="@string/number_enter"
            android:textSize="20sp"
            android:inputType="phone" />

        <ImageButton
            android:id="@+id/epilepsy_page_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_contacts"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/epilepsy_page_number_description"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_below="@id/epilepsy_page_phone_number"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/epilepsy_page_message_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_message"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/epilepsy_page_message_description"
            android:hint="@string/help_begging"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>

</LinearLayout>